# puzzlebot-pallet-loader

./: .gitignore  README.md  main.py
.github/workflows/: run-python.yml
mini_challenge2/: README.md  setup.py
mini_challenge2/urdf/: puzzlebot.urdf
src/: README.md
src/camera_dataset/: package.xml  setup.cfg  setup.py
src/camera_dataset/camera_dataset/: camera_node.py  dataset_node.py
src/fpga_lifter_bridge/: package.xml  setup.cfg  setup.py
src/mini_challenge2/: package.xml  setup.cfg
src/mini_challenge2/launch/: puzzlebot_launch.py
src/mini_challenge2/mini_challenge2/: circular_movement.py
src/mini_challenge2/urdf/: puzzlebot.urdf
src/mini_challenge3/: README.md  package.xml  setup.py
src/mini_challenge3/launch/: puzzlebot_sim_launch.py
src/mini_challenge3/puzzlebot_sim/: joint_state_pub.py  localisation.py  point_stabilisation_control.py  puzzlebot_sim.py
src/mini_challenge4/: README.md  package.xml  setup.cfg  setup.py
src/mini_challenge4/launch/: puzzlebot_sim_launch.py
src/mini_challenge4/multi_puzzlebot_sim/: joint_state_pub.py  localisation.py  point_stabilisation_control.py  puzzlebot_sim.py
src/mini_challenge4/urdf/: puzzlebot.urdf
src/mini_challenge5/: README.md  package.xml  setup.cfg  setup.py
src/mini_challenge5/launch/: mini_challenge5.launch.py
src/mini_challenge5/mini_challenge5/: puzzlebot_sim.py
src/mini_challenge5/rviz/: mini_challenge5.rviz
src/mini_challenge5/urdf/: puzzlebot.urdf
src/mini_challenge6/: README.md  package.xml  setup.cfg  setup.py
src/mini_challenge6/config/: obstacle_avoidance_1.yaml  (+3 more)
(+5 files in other folders)
